add font and icon resources

--- a/web_interface/prod/index.html
+++ b/web_interface/prod/index.html
@@ -6,8 +6,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
+  <!-- Font Awesome Icons -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400|Open+Sans:400,700&display=swap" rel="stylesheet">
+  
+  
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="main.css">
+  
+  
 	
 	
 	
@@ -23,7 +35,7 @@
 		<div class="">
 			<div class="row ">
 				<div class="col-12">
-					<h1> Handwritten Digit Recogniser </h1>
+					<h1>Handwritten Digit Recogniser  <i class="fas fa-signature"></i>   </h1>
 				</div>
 			</div>
 			<div class="row mb-3">
