--- a/web_interface/prod/index.html
+++ b/web_interface/prod/index.html
@@ -20,10 +20,21 @@
   <link rel="stylesheet" href="main.css">
   
   
+  
+  
+  
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+  <!--
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  -->
+
 	
 	
-	
-  <title>Handwriting Recogniser</title>
+  <title>Digit Recogniser</title>
 
 
 </head>
