add link back to main project site

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					</p>
 				</div>
 				<div class="col-12 smaller-text mb-5">
-					<a href="" style="float:right;">more projects...</a>
+					<a href="https://jasonpilbrough.github.io/" style="float:right;">more projects...</a>
 				</div>
 			</div>
 			
